--- a/views/partials/blog/cards.hbs
+++ b/views/partials/blog/cards.hbs
@@ -3,7 +3,7 @@ Partial : blog/Cards
 --}}
 <!--- Cards--->
 <section class="famille-prod" id="cards">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row" id="listCard">
 
             {{#each dbarticles }}
