--- a/views/partials/blogid/coms/addcoms.hbs
+++ b/views/partials/blogid/coms/addcoms.hbs
@@ -7,12 +7,12 @@ Partial : Id/Comms/Add coms
     <form action="/blog-id" method="post">
         <div class="input-group">
             <span class="input-group-text" id="inputGroupPrepend2">@</span>
-            <input name="user" type="text" class="form-control" placeholder="Nom d'utilisateur"
+            <input name="pseudouser" type="text" class="form-control" placeholder="Nom d'utilisateur"
                 aria-describedby="inputGroupPrepend2" required>
         </div>
         <label> Votre commentaire:</label>
         <div class="contact-form">
-            <textarea name="messagecom" rows="3" class="contact-message"> </textarea>
+            <textarea name="content" rows="3" class="contact-message"> </textarea>
         </div>
 
         <!--- Bouton- -->
