--- a/views/partials/Admin/gestblog.hbs
+++ b/views/partials/Admin/gestblog.hbs
@@ -49,6 +49,7 @@ Partial : Admin/ Gestion Blog
                                     </button>
                                 </form>
                             </div>
+                            <p class="text-muted">Date:{{ this.dateart }} </p>
 
                         </div>
                     </div>
