--- a/views/partials/HeadDefault.hbs
+++ b/views/partials/HeadDefault.hbs
@@ -10,7 +10,7 @@ Page type :Head par default
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title> ⚡ Graines de Citoyen Montgesnois ⚡ </title>
     <!---Icon-->
     <script src="https://kit.fontawesome.com/a2d449ee14.js" crossorigin="anonymous"></script>
     <!---Font-->
