--- a/views/partials/modals/modalsupprpic.hbs
+++ b/views/partials/modals/modalsupprpic.hbs
@@ -1,11 +1,13 @@
 {{!--
-Modal / Admin : suppr photos
+Modal / Admin : Suppr pics
 --}}
 
 <!------------------------- Modal suppr photos ------------------------->
+
 <div class="modal fade" id="delpics" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
+
             <div class="modal-header">
                 <h5 class="modal-title" id="ModalLabel">Supprimer contenu
                 </h5>
@@ -16,10 +18,11 @@ Modal / Admin : suppr photos
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                
-                <form action="/admin/{{ this.id }}/?_method=DELETE" method="post"><button name="DeletePic?"
-                        type="submit" class="btn btn-danger">Delete
-                    </button> </form>
+
+                <form action="/adminn/{{ this.idphotos }}/?_method=DELETE" method="post" enctype="multipart/form-data">
+                    <button type="submit" class="btn btn-danger">Delete
+                    </button>
+                </form>
             </div>
         </div>
     </div>
