--- a/views/partials/modals/modaladdcards.hbs
+++ b/views/partials/modals/modaladdcards.hbs
@@ -10,7 +10,7 @@ Modal / Admin : Gestion card
                 <h5 class="modal-title" id="ModalLab"> Edit Card</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form action="/admin" method="post" enctype="multipart/form-data">
+            <form action="/admin/blog" method="post" enctype="multipart/form-data">
                 <div class="modal-body">
 
                     <div class="col-md-12">
