--- a/views/partials/modals/modalsupprpic.hbs
+++ b/views/partials/modals/modalsupprpic.hbs
@@ -19,7 +19,7 @@ Modal / Admin : Suppr pics
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
 
-                <form action="/adminn/{{ this.idphotos }}/?_method=DELETE" method="post" enctype="multipart/form-data">
+                <form action="/admin/pics/{{ this.idphotos }}/?_method=DELETE" method="post" enctype="multipart/form-data">
                     <button type="submit" class="btn btn-danger">Delete
                     </button>
                 </form>
