--- a/views/partials/user/showuser.hbs
+++ b/views/partials/user/showuser.hbs
@@ -7,30 +7,21 @@ Partial : user/ Profil utilisateur
         <h2>Mon Profil</h2>
         <div class="row border border-5 border-success">
             <div class="col-md-2">
-                <img class="img-fluid rounded-circle mx-auto d-block"
-                    src="/assets/images/logo.png">
+                <img class="img-fluid rounded-circle mx-auto d-block" src="/assets/images/logo.png">
             </div>
             <div class="col-md-10">
                 <div class="col-md-12">
-                    <label class="form-label">Nom d'utilisateur:</label>
-                    <div class="input-group">
-                        <span class="input-group-text">@</span>
-                        <input name="pseudo" type="text" class="form-control" value="JohnDuff" aria-describedby="inputGroupPrepend">
-                    </div>
+                    <h4>Nom d'utilisateur : </h4>
                 </div>
 
-                <div class="col-md-6">
-                    <label class="form-label">Prénom:</label>
-                    <input name="firstname" type="text" class="form-control" value="John">
-                </div>
-                <div class="col-md-6">
-                    <label class="form-label">Nom:</label>
-                    <input name="name" type="text" class="form-control" value="Duff">
+                <div class="col-md-12">
+                    <h4>Prénom:</h4>
                 </div>
                 <div class="col-md-12">
-                    <label class="form-label">Adresse Email :</label>
-                    <input name="email" type="email" class="form-control" value="name@example.com">
-
+                    <h4>Nom:</h4>
+                </div>
+                <div class="col-md-12">
+                    <h4>Adresse Email :</h4>
                 </div>
 
             </div>
