--- a/views/partials/Admin/gestuser.hbs
+++ b/views/partials/Admin/gestuser.hbs
@@ -31,33 +31,32 @@ Partial : Admin/ Gestion utilisateurs
                     </tr>
                 </thead>
                 <tbody>
+                    {{#each dbuser }}
                     <tr>
-                        <th><img class="img-user" src="/assets/images/julia.jpg"> </th>
-                        <td>user name</td>
-                        <td>Name</td>
-                        <td>First Name</td>
-                        <td>@mail.com</td>
-                        <td scope="col-xs-2"><button type="button" class="btn" data-bs-toggle="modal"
-                                data-bs-target="#GestModal">
-                                <i class="fas fa-tools"></i></i></button></td>
-                    </tr>
-                    <tr>
-                        {{#each dbuser }}
-                        <th><img class="img-user" src="/assets/images/emilie.jpg"> </th>
+                        <th><img class="img-user" src="/assets/data/{{ this.imguser }}"> </th>
                         <td>{{ this.pseudo }}</td>
                         <td>{{ this.firstname }}</td>
                         <td>{{ this.name }}</td>
                         <td>{{ this.email }}</td>
-                        {{/each}}
+                        <td scope="col-xs-2">
+                            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#GestModal{{ this.id }}">
+                                <i class="fas fa-tools"></i></i></button>
+                            <form action="/admin/user/{{ this.id }}/?_method=DELETE" method="post"
+                                enctype="multipart/form-data"> <button class="text-danger" name="DeleteCard"
+                                    type="submit"><i class="fas fa-trash-alt "></i>
+                                </button>
+                            </form>
+                        </td>
+
                     </tr>
-
-
+                    {{> modals/modalgestuser }}
+                    {{/each}}
                 </tbody>
             </table>
         </div>
     </div>
 
-    {{> modals/modalgestuser }}
+
 
 
 </div>
