--- a/views/partials/modals/modaladdpics.hbs
+++ b/views/partials/modals/modaladdpics.hbs
@@ -11,7 +11,7 @@ Modal / Admin : Gestion photos
                 </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form action="/adminn" method="post" enctype="multipart/form-data">
+            <form action="/admin/pics" method="post" enctype="multipart/form-data">
                 <div class="modal-body">
 
                     <div class="col-md-12">
