--- a/views/partials/modals/modaleditcard.hbs
+++ b/views/partials/modals/modaleditcard.hbs
@@ -11,7 +11,7 @@ Modal / Admin : Gestion card
                 <h5 class="modal-title" id="ModalLab"> Edit Card</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form action="/admin/{{ this.id }}/?_method=PUT" method="post" enctype="multipart/form-data">
+            <form action="/admin/blog/{{ this.id }}/?_method=PUT" method="post" enctype="multipart/form-data">
                 <div class="modal-body">
 
                     <div class="col-md-12">
