session/login/register/logout/bcrypt

--- a/views/partials/modals/modalLogout.hbs
+++ b/views/partials/modals/modalLogout.hbs
@@ -16,7 +16,7 @@
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-contact" data-bs-dismiss="modal">confirmer</button>
+                <a href="/logout" class="btn btn-contact">confirmer</a>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
