--- a/views/partials/blog/cards.hbs
+++ b/views/partials/blog/cards.hbs
@@ -10,7 +10,7 @@ Partial : blog/Cards
 
             <div class="col-md-4">
                 <div class="famille-details card">
-                    <img class="card-img-top" src="/assets/data/{{ this.imgarticle }}" alt="paysage">
+                    <img class="card-img-top" src="/assets/data/articles/{{ this.imgarticle }}" alt="paysage">
                     <div class="card-body">
                         <h4 class="card-title">{{this.title}}</h4>
                         <p class="card-text">{{this.description}}</p>
