--- a/views/partials/Admin/gestpics.hbs
+++ b/views/partials/Admin/gestpics.hbs
@@ -22,8 +22,8 @@ Partial : Admin/ Gestion photos
                 {{#each dbpics }}
 
                 <div class="col-md-4">
-                    <div class="galeries-img position-relative"
-                        style="background-image: url(/assets/data/{{ this.photo }});">
+                    <div class="galeries-img"
+                        style="background-image: url(/assets/data/photos/{{ this.photo }});">
                         <div class="text-white">
                             <p class="fst-italic text-white position-absolute bottom-0 end-0"><i
                                     class="fas fa-camera"></i>
@@ -31,7 +31,7 @@ Partial : Admin/ Gestion photos
                         </div>
                         <div class=" position-absolute top-0 end-0 ">
                             <button class=" btn btn-danger" type="submit" data-bs-toggle="modal"
-                                data-bs-target="#delpics" name="Deletepic">Delete</button>
+                                data-bs-target="#DelPics{{ this.idphotos }}" name="Deletepic">Delete</button>
                         </div>
                     </div>
                 </div>
