--- a/views/partials/Admin/gestuser.hbs
+++ b/views/partials/Admin/gestuser.hbs
@@ -33,22 +33,22 @@ Partial : Admin/ Gestion utilisateurs
                 <tbody>
                     {{#each dbuser }}
                     <tr>
-                        <th><img class="img-user" src="/assets/data/{{ this.imguser }}"> </th>
+                        <th><img class="img-user" src="/assets/data/users/{{ this.imguser }}"> </th>
                         <td>{{ this.pseudo }}</td>
                         <td>{{ this.firstname }}</td>
                         <td>{{ this.name }}</td>
                         <td>{{ this.email }}</td>
                         <td scope="col-xs-2">
-                            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#GestModal{{ this.id }}">
-                                <i class="fas fa-tools"></i></i></button>
-                            <form action="/admin/user/{{ this.id }}/?_method=DELETE" method="post"
-                                enctype="multipart/form-data"> <button class="text-danger" name="DeleteCard"
+                            <a data-bs-toggle="modal" data-bs-target="#GestModal{{ this.id }}" class="btn"> <i
+                                    class="fas fa-tools"></i></a>
+                            <a class="text-danger" data-bs-toggle="modal" data-bs-target="#DelUser{{ this.id }}"
                                     type="submit"><i class="fas fa-trash-alt "></i>
-                                </button>
+                                </a>
                             </form>
                         </td>
 
                     </tr>
+                    {{> modals/modalsuppruser }}
                     {{> modals/modalgestuser }}
                     {{/each}}
                 </tbody>
