--- a/views/partials/contact/contact.hbs
+++ b/views/partials/contact/contact.hbs
@@ -36,32 +36,21 @@ Partial : contact/contact
                 </div>
 
                 <!--Create Form-->
-                <form action="/contact" method="post" >
+                <form action="/contact" method="post">
                     <!-- Nom & Email- -->
                     <div class="row">
                         <div class="col-md-6">
                             <div class="contact-form">
                                 <label class="form-label">Nom:</label>
-                                <input name="name" class="form-control" type="text" id="name" placeholder="Ajouter votre Nom" />
+                                <input name="name" class="form-control" type="text" id="name"
+                                    placeholder="Ajouter votre Nom" />
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="contact-form">
                                 <label class="form-label">Email:</label>
-                                <input name="email" class="form-control" type="email" id="email" placeholder="Ajouter votre email" />
-                            </div>
-                        </div>
-                    </div>
-                    <!--- Service- -->
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="contact-form">
-                                <label class="form-label">Sélectionnez le service</label>
-                                <select name="Service">
-                                    <option>1er Service</option>
-                                    <option>2ème Service</option>
-                                    <option>SAV</option>
-                                </select>
+                                <input name="email" class="form-control" type="email" id="email"
+                                    placeholder="Ajouter votre email" />
                             </div>
                         </div>
                     </div>
