--- a/views/partials/user/showuser.hbs
+++ b/views/partials/user/showuser.hbs
@@ -8,7 +8,7 @@ Partial : user/ Profil utilisateur
         {{#each dbuser}}
         <div class="row border border-5 border-success">
             <div class="col-md-2">
-                <img class="img-fluid rounded-circle mx-auto d-block" src="/assets/data/{{ this.imguser }}">
+                <img class="img-fluid rounded-circle mx-auto d-block" src="/assets/data/users/{{ this.imguser }}">
             </div>
             <div class="col-md-10">
                 <div class="col-md-12">
